--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "chart.js": "^2.9.3"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bamboomatic/CompaniesTable.git"
